# duckdb-title-mapper

./: Cargo.toml  Makefile  README.md  test_query.sql  test_remote_extension_install.sql
.github/workflows/: MainDistributionPipeline.yml
builds/: README.md
builds/v1.3.2/linux_amd64/: standardize_title.duckdb_extension  standarize_title.duckdb_extension
builds/v1.3.2/linux_arm64/: standardize_title.duckdb_extension  standarize_title.duckdb_extension
builds/v1.3.2/osx_amd64/: standardize_title.duckdb_extension  standarize_title.duckdb_extension
builds/v1.3.2/osx_arm64/: standardize_title.duckdb_extension  standarize_title.duckdb_extension
builds/v1.3.2/windows_amd64/: standardize_title.duckdb_extension  standarize_title.duckdb_extension
builds/v1.3.2/windows_amd64_mingw/: standardize_title.duckdb_extension  standarize_title.duckdb_extension
builds/v1.4.0/linux_amd64/: standardize_title.duckdb_extension
builds/v1.4.0/linux_arm64/: standardize_title.duckdb_extension
builds/v1.4.0/osx_amd64/: standardize_title.duckdb_extension
builds/v1.4.0/osx_arm64/: standardize_title.duckdb_extension
builds/v1.4.0/windows_amd64/: standardize_title.duckdb_extension
builds/v1.4.0/windows_amd64_mingw/: standardize_title.duckdb_extension
builds/v1.4.1/linux_amd64/: standardize_title.duckdb_extension  title_mapper.duckdb_extension
examples/: test_community_extension.sql  test_query.sql  test_remote_extension_install.sql
resources/: standarized_titles.json
scripts/: README.md
src/: lib.rs  utils.rs
test/sql/: title_mapper.test
(+8 files in other folders)
