[package]
name = "standardize_title"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[[example]]
# crate-type can't be (at the moment) be overriden for specific targets
# src/wasm_lib.rs forwards to src/lib.rs so that we can change from cdylib
# (that is needed while compiling natively) to staticlib (needed since the
# actual linking will be done via emcc
name = "standardize_title"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
bincode = "1.3.3"
dashmap = "6.1.0"
duckdb = { version = "1.4.0", features = [
    "vscalar",
    "vscalar-arrow",
    "vtab-arrow"
] }
duckdb-loadable-macros = "0.1.5"
libduckdb-sys = { version = "1.4.0", features = ["loadable-extension"] }
ndarray = "0.16.1"
once_cell = "1.21.3"
rayon = "1.10.0"
regex = "1.11.1"
rust-stemmers = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
sprs = { version = "0.11", features = ["serde"] }
rustc-hash = "1.1"
